# tradingbot

./: Cargo.toml
src/: main.rs
src/example/: example.rs
src/strategy/: core_satellite.rs  rsi.rs
src/utils/: constants.rs  util.rs
